--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" hre="style.css"> 
+    <link rel="stylesheet" hre="style.css">
 
 
 
 </head>
-<body>
-    
-    <h1>
-        Seach for cities
-    </h1>
 
+<body>
+
+    <div>
+        <h1>
+            Seach for cities
+
+        </h1>
+        <input type="text" placeholder="enterCity" />
+        <button type="button" id="searchBtn">Search</button>
+    </div>
+
+
+    <script src="./script.js"></script>
 </body>
+
+
 </html>
