--- a/index.html
+++ b/index.html
@@ -16,11 +16,40 @@
 
     <div>
         <h1>
-            Seach for cities
+            Seach for cities weather!
 
         </h1>
-        <input type="text" placeholder="enterCity" />
+        <input id="citySearch" type="text" placeholder="enterCity" />
         <button type="button" id="searchBtn">Search</button>
+    </div>
+
+    <div>
+        <h2>
+
+            City name
+
+        </h2>
+    </div>
+
+    <div>
+
+    <h3 class="weatherBox">
+        City name
+
+    </h3>
+
+    </div>
+
+    <div>
+        <ul>
+            <li>city</li>
+            <li>city</li>
+            <li>city</li>
+            <li>city</li>
+            <li>city</li>
+            <li>city</li>
+            <li>city</li>
+        </ul>
     </div>
 
 
