Added city list

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
     <div>
         <ul>
-            <li>city</li>
-            <li>city</li>
-            <li>city</li>
-            <li>city</li>
-            <li>city</li>
-            <li>city</li>
-            <li>city</li>
+            <li>"St.Louis"</li>
+            <li>"FortWorth"</li>
+            <li>"Pheonix"</li>
+            <li>"Columbia"</li>
+            <li>"Dallas"</li>
+            <li>"Chicago"</li>
+            <li>"Denver</li>
         </ul>
     </div>
 
