fixed some html working on CSS

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 
     <link rel="stylesheet" hre="style.css">
-
-
-
 </head>
 
 <body>
@@ -23,34 +20,16 @@
         <button type="button" id="searchBtn">Search</button>
     </div>
 
-    <div>
-        <h2>
-
-            City name
-
-        </h2>
+    <div class="weatherBox">
+    <h2 class="city">Weather In St.Louis</h2>
+    <div class="temp">51°c</div>
+    <img src="" alt="" class="icon" />
+    <div class="descripton">Cloudy</div>
+    <div class="humidity">humidity: 60%</div>
+    <div class="wind">Wind speed: 6.2km/h</div>
     </div>
 
-    <div>
-
-    <h3 class="weatherBox">
-        City name
-
-    </h3>
-
-    </div>
-
-    <div>
-        <ul>
-            <li>"St.Louis"</li>
-            <li>"FortWorth"</li>
-            <li>"Pheonix"</li>
-            <li>"Columbia"</li>
-            <li>"Dallas"</li>
-            <li>"Chicago"</li>
-            <li>"Denver</li>
-        </ul>
-    </div>
+   
 
 
     <script src="./script.js"></script>
