--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </div>
 
     <div class="weatherBox">
-    <h2 class="city">Weather In St.Louis</h2>
-    <div class="temp">51°c</div>
-    <img src="" alt="" class="icon" />
-    <div class="descripton">Cloudy</div>
-    <div class="humidity">humidity: 60%</div>
-    <div class="wind">Wind speed: 6.2km/h</div>
+    <h2 id="city"></h2>
+    <div class="temp"><span id="localTemp"></span>°F</div>
+    <div id="img"></div>
+    <div class="descripton">Cloudy: <span id="localCloudy"></span></div>
+    <div class="humidity">humidity: <span id="localHumidity"></span>%</div>
+    <div class="wind">Wind speed: <span id="localWindSpeed"></span>MPH</div>
     </div>
 
    
