Add styling and assets folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" hre="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
@@ -23,16 +23,19 @@
     <div class="weatherBox">
     <h2 id="city"></h2>
     <div class="temp"><span id="localTemp"></span>°F</div>
-    <div id="img"></div>
-    <div class="descripton">Cloudy: <span id="localCloudy"></span></div>
+    <div id="imgWeather"></div>
+    <div class="cloudy">Cloudy: <span id="localCloudy"></span></div>
     <div class="humidity">humidity: <span id="localHumidity"></span>%</div>
     <div class="wind">Wind speed: <span id="localWindSpeed"></span>MPH</div>
     </div>
 
-   
+    <h4>5 Day Forecast</h4>
+   <div id="fiveDay">
+        
+   </div>
 
 
-    <script src="./script.js"></script>
+    <script src="./Assets/script.js"></script>
 </body>
 
 
